--- a/k8s/payload-processor/templates/serviceaccount.yaml
+++ b/k8s/payload-processor/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "payloads-processor.serviceAccountName" . }}
+  name: {{ include "payload-processor.serviceAccountName" . }}
   labels:
-    {{- include "payloads-processor.labels" . | nindent 4 }}
+    {{- include "payload-processor.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
