--- a/src/payload-processor/processor/BUILD.bazel
+++ b/src/payload-processor/processor/BUILD.bazel
@@ -5,5 +5,5 @@ go_library(
     srcs = ["processor.go"],
     importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_rabbitmq_amqp091_go//:amqp091-go"],
+    deps = ["@com_github_segmentio_kafka_go//:kafka-go"],
 )
