--- a/src/payload-processor/processor/BUILD.bazel
+++ b/src/payload-processor/processor/BUILD.bazel
@@ -10,9 +10,9 @@ go_library(
     importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
     visibility = ["//visibility:public"],
     deps = [
-        "//vendor/github.com/jmoiron/sqlx",
-        "//vendor/github.com/segmentio/kafka-go",
-        "//vendor/go.uber.org/mock/gomock",
+        "@com_github_jmoiron_sqlx//:sqlx",
+        "@com_github_segmentio_kafka_go//:kafka-go",
+        "@org_uber_go_mock//gomock",
     ],
 )
 
@@ -21,8 +21,8 @@ go_test(
     srcs = ["processor_test.go"],
     embed = [":processor"],
     deps = [
-        "//vendor/github.com/segmentio/kafka-go",
-        "//vendor/github.com/stretchr/testify/require",
-        "//vendor/go.uber.org/mock/gomock",
+        "@com_github_segmentio_kafka_go//:kafka-go",
+        "@com_github_stretchr_testify//require",
+        "@org_uber_go_mock//gomock",
     ],
 )
