--- a/src/payload-processor/processor/BUILD.bazel
+++ b/src/payload-processor/processor/BUILD.bazel
@@ -5,12 +5,12 @@ go_library(
     srcs = [
         "db.go",
         "mock_db.go",
-        "model.go",
         "processor.go",
     ],
     importpath = "github.com/Baitinq/fs-tracer-backend/src/payload-processor/processor",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib",
         "@com_github_google_uuid//:uuid",
         "@com_github_jmoiron_sqlx//:sqlx",
         "@com_github_segmentio_kafka_go//:kafka-go",
@@ -23,6 +23,7 @@ go_test(
     srcs = ["processor_test.go"],
     embed = [":processor"],
     deps = [
+        "//lib",
         "@com_github_segmentio_kafka_go//:kafka-go",
         "@com_github_stretchr_testify//require",
         "@org_uber_go_mock//gomock",
